--- a/withdraw.html
+++ b/withdraw.html
@@ -213,9 +213,11 @@
   const submitBtn = document.getElementById("submitBtn");
   const userEmailDiv = document.getElementById("userEmail");
 
+  // ✅ FIX: Always show the message when called
   function showMessage(text, ok=false) {
     msg.textContent = text;
     msg.className = "msg " + (ok ? "ok" : "err");
+    msg.style.display = "block";
   }
 
   async function loadUser() {
@@ -235,7 +237,8 @@
 
   submitBtn.addEventListener("click", async () => {
     try {
-      msg.style.display = "none";
+      showMessage("Submitting withdrawal request...");
+
       submitBtn.disabled = true;
       submitBtn.textContent = "Submitting...";
 
@@ -290,7 +293,8 @@
         return;
       }
 
-      showMessage("Withdrawal request submitted successfully ✅", true);
+      // ✅ FIX: this WILL display now
+      showMessage("Withdrawal submitted successfully ✅", true);
 
       document.getElementById("amount").value = "";
       document.getElementById("wallet_address").value = "";
